--- a/delivery/web/templates/layouts/index.templ
+++ b/delivery/web/templates/layouts/index.templ
@@ -1,8 +1,13 @@
+package layouts
+
+templ IndexPage() {
 <html>
   <head>
-  <title>To Do List</title>
+    <title>To Do List</title>
+    <link rel="stylesheet" type="text/css" href="/assets/index.css" />
   </head>
   <body>
+
     <div id="container">
       <div id="header">
         <h1>Todo Header</h1>
@@ -20,4 +25,5 @@
       </div>
     </div>
   </body>
-
+</html>
+}
