--- a/delivery/web/templates/layouts/index.templ
+++ b/delivery/web/templates/layouts/index.templ
@@ -4,7 +4,9 @@ templ IndexPage() {
 <html>
   <head>
     <title>To Do List</title>
-    <link rel="stylesheet" type="text/css" href="/assets/index.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/index.css" />
+    <script src="/assets/js/htmx.min.js.gz"></script>
+
   </head>
   <body>
     <div id="container">
