--- a/delivery/web/templates/components/todo_item.templ
+++ b/delivery/web/templates/components/todo_item.templ
@@ -1,10 +1,13 @@
 package components
 
-import "github.com/hobord/poc-htmx-go-todolist/entities"
+import (
+  "github.com/hobord/poc-htmx-go-todolist/entities"
+  "github.com/hobord/poc-htmx-go-todolist/delivery/web/templates"
+)
 
 templ TodoItem(todo *entities.Todo) {
   <li class="todo-item">
-    <input type="checkbox" id="{ todo.ID }" checked?={ false } />
-    <label for="{ todo.ID }">{ todo.Title }</label>
+    <input type="checkbox" id={ templates.CssId(todo.ID) } checked?={ false } />
+    <label for={ todo.ID }>{ todo.Title }</label>
   </li>
 }
