--- a/delivery/web/templates/layouts/index.templ
+++ b/delivery/web/templates/layouts/index.templ
@@ -1,20 +1,19 @@
 package layouts
 
 import (
-"github.com/hobord/poc-htmx-go-todolist/entities"
-"github.com/hobord/poc-htmx-go-todolist/delivery/web/templates/components"
+	"github.com/hobord/poc-htmx-go-todolist/entities"
+	"github.com/hobord/poc-htmx-go-todolist/delivery/web/templates/components"
 )
 
 templ IndexPage(groups map[string][]*entities.Todo) {
-<html>
-  <head>
-    <title>To Do List</title>
-    <link rel="stylesheet" type="text/css" href="/assets/css/index.css" />
-    <script src="/assets/js/htmx.min.js.gz"></script>
-
-  </head>
-  <body>
-    @components.ListTodoGroups(groups)
-  </body>
-</html>
+	<html>
+		<head>
+			<title>To Do List</title>
+			<link rel="stylesheet" type="text/css" href="/assets/css/index.css"/>
+			<script src="/assets/js/htmx.min.js"></script>
+		</head>
+		<body>
+			@components.ListTodoGroups(groups)
+		</body>
+	</html>
 }
