--- a/delivery/web/templates/components/list_todo_groups.templ
+++ b/delivery/web/templates/components/list_todo_groups.templ
@@ -8,7 +8,7 @@ templ ListTodoGroups(groups []*entities.TodoGroup) {
         @TodoGroup(group)
     }
   <form 
-    hx-post="/todo-group/create"
+    hx-post="/group/"
     hx-target=".todo_groups"
     >
       <input name="title"/>
