--- a/delivery/web/templates/views/index.templ
+++ b/delivery/web/templates/views/index.templ
@@ -10,7 +10,7 @@ templ IndexPage(groups []*entities.TodoGroup) {
 		<head>
 			<title>To Do List</title>
 			<link rel="stylesheet" type="text/css" href="/assets/css/index.css"/>
-			<script src="/assets/js/htmx.min.js"></script>
+			<script src="/assets/js/htmx.js"></script>
       <!-- jsDelivr :: Sortable :: Latest (https://www.jsdelivr.com/package/npm/sortablejs) -->
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
       <script>
